@@ -24,6 +24,7 @@ Version 6.5 - not yet released
   - Android/IOIO: support MS5611 pressure sensor
   - added driver for Levil AHRS device
   - Leonardo: read indicated airspeed from PDGFTL1 sentence
+  - C-Probe: read IAS/TAS from the device
 * logger
   - auto-flush IGC logger after every fix
 * user interface
